--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,23 @@
 [package]
-name = "bbcli"
+name = "bb-cli"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-clap = "4.5.53"
+clap = { version = "4.5.53", features = ["derive", "env"] }
 comfy-table = "7.2.1"
 config = "0.15.19"
-reqwest = "0.12.24"
-tokio = "1.48.0"
-serde = "1.0.228"
+dirs = "6.0.0"
+keyring = "3.6.3"
+open = "5.3.3"
+reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = { version = "1.48.0", features = ["full"] }
+rpassword = "7.3.1"
+toml_edit = "0.23.7"
+
+[[bin]]
+name = "bb"
+path = "src/main.rs"
