--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ clap = { version = "4.5.53", features = ["derive", "env"] }
 comfy-table = "7.2.1"
 config = "0.15.19"
 dirs = "6.0.0"
-keyring = "3.6.3"
+keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
 open = "5.3.3"
 reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.228", features = ["derive"] }
