--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dirs = "6.0.0"
 keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
 open = "5.3.3"
 reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
+crossterm = "0.27"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.48.0", features = ["full"] }
