--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ crossterm = "0.27"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.48.0", features = ["full"] }
-rpassword = "7.3.1"
 toml_edit = "0.23.7"
+similar = { version = "2.7", features = ["inline"] }
+atty = "0.2"
 
 [[bin]]
 name = "bb"
